--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^2.0.5",
     "node-fetch": "^2.0.0",
     "nuxt": "^1.0.0"
   },
