--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@nuxtjs/pwa": "^2.0.5",
     "node-fetch": "^2.0.0",
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "nuxt-cluster": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
